--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cloud & Sunset Toy — Per‑Layer Memory Edition</title>
+<title>Cloud & Sunset Toy — Per‑Layer Memory Edition (Compact UI)</title>
 <style>
   :root{--panel:#171a23cc;--border:#272b36;--text:#e9ecf2;--sub:#a5adba;--accent:#ff7b4a}
-  html,body{margin:0;height:100%;background:#0b0e14;color:var(--text);font:13px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;overflow:hidden}
+  html,body{margin:0;height:100%;background:#0b0e14;color:var(--text);font:12px/1.35 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;overflow:hidden}
   canvas{display:block;width:100vw;height:100vh}
-  #panel{position:fixed;right:16px;top:16px;width:460px;max-width:calc(100vw - 24px);background:var(--panel);border:1px solid var(--border);backdrop-filter:blur(8px);border-radius:12px;padding:12px;box-shadow:0 10px 30px rgba(0,0,0,.35);user-select:none}
-  h1{margin:0 0 8px 0;font-size:15px;display:flex;align-items:center;gap:8px}
-  .dot{width:10px;height:10px;border-radius:50%;background:var(--accent);box-shadow:0 0 14px var(--accent)}
-  .sub{color:var(--sub);font-size:12px;margin:2px 0 8px}
-  .row{display:grid;grid-template-columns:1fr 126px;gap:8px;align-items:center;margin:6px 0}
-  .two{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-  label{font-size:12px;color:#c9ced9}
+  #panel{position:fixed;right:12px;top:12px;width:480px;max-width:calc(100vw - 24px);background:var(--panel);border:1px solid var(--border);backdrop-filter:blur(6px);border-radius:10px;padding:8px;box-shadow:0 10px 30px rgba(0,0,0,.35);user-select:none}
+  h1{margin:0 0 6px 0;font-size:14px;display:flex;align-items:center;gap:8px}
+  .dot{width:8px;height:8px;border-radius:50%;background:var(--accent);box-shadow:0 0 12px var(--accent)}
+  .sub{color:var(--sub);font-size:11px;margin:0 0 6px}
+  .row{display:grid;grid-template-columns:auto 1fr auto;gap:6px;align-items:center;margin:2px 0}
+  .two{display:grid;grid-template-columns:1fr 1fr;gap:6px}
+  .group{border-top:1px solid #222633;margin-top:6px;padding-top:6px}
+  label{font-size:11px;color:#c9ced9;white-space:nowrap}
   small{justify-self:end;color:#a9b0ba;font-variant-numeric:tabular-nums}
   input[type=range]{width:100%;accent-color:var(--accent)}
-  select,button,input[type=number]{background:#0f1219;color:var(--text);border:1px solid #2a2f3a;border-radius:10px;padding:6px 8px}
+  select,button,input[type=number]{background:#0f1219;color:var(--text);border:1px solid #2a2f3a;border-radius:8px;padding:4px 6px}
   button{cursor:pointer}
   button:hover{background:#151a25}
-  .pill{padding:6px 10px;border-radius:999px}
-  .group{border-top:1px solid #222633;margin-top:8px;padding-top:8px}
-  #stats{font-size:12px;color:#b7bdc8;margin-top:6px;display:grid;grid-template-columns:repeat(2,1fr);gap:6px}
-  #toast{position:fixed;left:16px;bottom:16px;background:#131726d0;border:1px solid #262b37;color:#d9ddea;border-radius:10px;padding:8px 10px}
+  .pill{padding:6px 8px;border-radius:999px}
+  #stats{font-size:11px;color:#b7bdc8;margin-top:4px;display:flex;gap:10px}
+  #toast{position:fixed;left:12px;bottom:12px;background:#131726d0;border:1px solid #262b37;color:#d9ddea;border-radius:8px;padding:6px 8px}
   @media(max-width:880px){#panel{width:calc(100% - 24px);left:12px;right:12px;top:auto;bottom:12px}}
 </style>
 </head>
@@ -31,52 +31,56 @@
 <canvas id="view"></canvas>
 <aside id="panel">
   <h1><span class="dot"></span> Cloud • Sunset Toy — Per‑Layer Memory</h1>
-  <div class="sub">Each cloud layer now has its <b>own parameters + seed</b>. When you switch layers, the controls recall that layer’s flavor. Drag to paint humidity on the selected layer. <b>Shift+drag</b> to erase.</div>
+  <div class="sub">Per‑layer seeds & parameters; switching layers recalls that layer’s settings. Drag to paint humidity. <b>Shift</b> to erase.</div>
 
-  <div class="row"><label>Layers</label><small id="val-layers">3</small><input id="layers" type="range" min="1" max="5" step="1" value="3"/></div>
-  <div class="row"><label>Paint / Edit layer</label><select id="paintLayer"></select></div>
+  <div class="two">
+    <div class="row"><label>Layers</label><input id="layers" type="range" min="1" max="5" step="1" value="3"/><small id="val-layers">3</small></div>
+    <div class="row"><label>Paint layer</label><select id="paintLayer"></select><small></small></div>
+  </div>
 
   <div class="group">
-    <div class="row"><label>Render scale</label><small id="val-rs">0.50×</small><input id="renderScale" type="range" min="0.30" max="1.40" step="0.01" value="0.50"/></div>
-    <div class="row"><label>FPS cap</label><small id="val-fps">30</small><input id="fpsCap" type="range" min="20" max="60" step="1" value="30"/></div>
-    <div class="row"><label>Stagger updates</label><select id="stagger"><option value="0" selected>Off</option><option value="2">2×</option><option value="3">3×</option></select></div>
-    <div class="row"><label>Shading quality</label><select id="shadeQ"><option value="0">Flat (fastest)</option><option value="1" selected>Fast</option><option value="2">High</option></select></div>
-    <div class="row"><label>Depth blur</label><select id="depthBlur"><option value="off" selected>Off</option><option value="on">On</option></select></div>
-    <div class="row"><label>HiDPI</label><select id="hidpi"><option value="off" selected>Off</option><option value="on">On</option></select></div>
-    <div class="row"><label>Auto‑perf</label><select id="autoperf"><option value="off" selected>Off</option><option value="on">On</option></select></div>
+    <div class="two">
+      <div class="row"><label>Render scale</label><input id="renderScale" type="range" min="0.30" max="1.40" step="0.01" value="0.50"/><small id="val-rs">0.50×</small></div>
+      <div class="row"><label>FPS cap</label><input id="fpsCap" type="range" min="20" max="60" step="1" value="30"/><small id="val-fps">30</small></div>
+      <div class="row"><label>Shading</label><select id="shadeQ"><option value="0">Flat</option><option value="1" selected>Fast</option><option value="2">High</option></select><small></small></div>
+      <div class="row"><label>Stagger</label><select id="stagger"><option value="0" selected>Off</option><option value="2">2×</option><option value="3">3×</option></select><small></small></div>
+      <div class="row"><label>Depth blur</label><select id="depthBlur"><option value="off" selected>Off</option><option value="on">On</option></select><small></small></div>
+      <div class="row"><label>HiDPI</label><select id="hidpi"><option value="off" selected>Off</option><option value="on">On</option></select><small></small></div>
+    </div>
+    <div class="row"><label>Auto‑perf</label><select id="autoperf"><option value="off" selected>Off</option><option value="on">On</option></select><small></small></div>
     <div id="stats"><div>Internal: <span id="resLabel">—</span></div><div>EMA ms: <span id="emaLabel">—</span></div></div>
   </div>
 
   <div class="group">
-    <div class="row"><label>Sun elevation</label><small id="val-elev">18°</small><input id="elev" type="range" min="0" max="85" step="1" value="18"/></div>
-    <div class="row"><label>Sun azimuth</label><small id="val-az">-8°</small><input id="az" type="range" min="-180" max="180" step="1" value="-8"/></div>
-    <div class="row"><label>Day warmth</label><small id="val-warm">0.85</small><input id="warm" type="range" min="0" max="1" step="0.01" value="0.85"/></div>
-    <div class="row"><label>Depth fade</label><small id="val-fade">0.45</small><input id="fade" type="range" min="0" max="1" step="0.01" value="0.45"/></div>
-    <div class="row"><label>Depth blur radius</label><small id="val-blur">3.0px</small><input id="blur" type="range" min="0" max="8" step="0.1" value="3"/></div>
-    <div class="row"><label>Parallax</label><small id="val-par">0.55</small><input id="parallax" type="range" min="0" max="1" step="0.01" value="0.55"/></div>
-    <div class="row"><label>Layer spread</label><small id="val-spread">0.35</small><input id="spread" type="range" min="0" max="1" step="0.01" value="0.35"/></div>
+    <div class="two">
+      <div class="row"><label>Sun elev</label><input id="elev" type="range" min="0" max="85" step="1" value="18"/><small id="val-elev">18°</small></div>
+      <div class="row"><label>Sun azim</label><input id="az" type="range" min="-180" max="180" step="1" value="-8"/><small id="val-az">-8°</small></div>
+      <div class="row"><label>Warmth</label><input id="warm" type="range" min="0" max="1" step="0.01" value="0.85"/><small id="val-warm">0.85</small></div>
+      <div class="row"><label>Depth fade</label><input id="fade" type="range" min="0" max="1" step="0.01" value="0.45"/><small id="val-fade">0.45</small></div>
+      <div class="row"><label>Blur radius</label><input id="blur" type="range" min="0" max="8" step="0.1" value="3"/><small id="val-blur">3.0px</small></div>
+      <div class="row"><label>Parallax</label><input id="parallax" type="range" min="0" max="1" step="0.01" value="0.55"/><small id="val-par">0.55</small></div>
+      <div class="row"><label>Layer spread</label><input id="spread" type="range" min="0" max="1" step="0.01" value="0.35"/><small id="val-spread">0.35</small></div>
+    </div>
   </div>
 
   <div class="group">
-    <div class="row"><label>Coverage (this layer)</label><small id="val-cov">0.55</small><input id="cov" type="range" min="0" max="1" step="0.01"/></div>
-    <div class="row"><label>Turbulence (this layer)</label><small id="val-turb">1.10</small><input id="turb" type="range" min="0.3" max="2.5" step="0.01"/></div>
-    <div class="row"><label>Wind speed (this layer)</label><small id="val-wspd">0.40</small><input id="wspd" type="range" min="0" max="1.2" step="0.01"/></div>
-    <div class="row"><label>Wind direction (this layer)</label><small id="val-wdir">20°</small><input id="wdir" type="range" min="-180" max="180" step="1"/></div>
+    <div class="two">
+      <div class="row"><label>Coverage</label><input id="cov" type="range" min="0" max="1" step="0.01"/><small id="val-cov">0.55</small></div>
+      <div class="row"><label>Turbulence</label><input id="turb" type="range" min="0.3" max="2.5" step="0.01"/><small id="val-turb">1.10</small></div>
+      <div class="row"><label>Wind speed</label><input id="wspd" type="range" min="0" max="1.2" step="0.01"/><small id="val-wspd">0.40</small></div>
+      <div class="row"><label>Wind dir</label><input id="wdir" type="range" min="-180" max="180" step="1"/><small id="val-wdir">20°</small></div>
+      <div class="row"><label>Temperature</label><input id="temp" type="range" min="0" max="1" step="0.01"/><small id="val-temp">0.50</small></div>
+      <div class="row"><label>Decay</label><input id="decay" type="range" min="0.005" max="0.08" step="0.001"/><small id="val-decay">0.020</small></div>
+      <div class="row"><label>Lift</label><input id="lift" type="range" min="0" max="16" step="0.1"/><small id="val-lift">7.0</small></div>
+      <div class="row"><label>Charge</label><input id="charge" type="range" min="0" max="2.0" step="0.01"/><small id="val-charge">0.60</small></div>
+    </div>
   </div>
 
-  <div class="group">
-    <div class="row"><label>Temperature (this layer)</label><small id="val-temp">0.50</small><input id="temp" type="range" min="0" max="1" step="0.01"/></div>
-    <div class="row"><label>Decay (this layer)</label><small id="val-decay">0.020</small><input id="decay" type="range" min="0.005" max="0.08" step="0.001"/></div>
-    <div class="row"><label>Lift / convection (this layer)</label><small id="val-lift">7.0</small><input id="lift" type="range" min="0" max="16" step="0.1"/></div>
-    <div class="row"><label>Charge / contrast (this layer)</label><small id="val-charge">0.60</small><input id="charge" type="range" min="0" max="2.0" step="0.01"/></div>
-  </div>
-
-  <div class="group two">
+  <div class="two">
     <button id="sunset" class="pill">Sunset Sweep</button>
     <button id="pause" class="pill">Pause</button>
   </div>
-
-  <div class="group two">
+  <div class="two" style="margin-top:4px">
     <button id="reseedLayer" class="pill">Reseed Layer</button>
     <button id="reseedAll" class="pill">Reseed All</button>
   </div>
@@ -93,8 +97,7 @@
   function fbm3(x,y,z,oct=4,lac=2.03,gain=0.5){let a=0,amp=0.5,f=1;for(let i=0;i<oct;i++){a+=amp*perlin3(x*f,y*f,z*f);amp*=gain;f*=lac;}return a}
 
   const canvas=document.getElementById('view');
-  let DPR=1;
-  const ctx=canvas.getContext('2d');
+  let DPR=1; const ctx=canvas.getContext('2d');
 
   const qs=id=>document.getElementById(id);
   const layersEl=qs('layers'), valLayers=qs('val-layers');
@@ -269,8 +272,7 @@
   reseedLayerBtn.onclick=()=>{const L=layers[paintLayerIndex]; reseedOne(L)}
   reseedAllBtn.onclick=()=>{for(const L of layers) reseedOne(L)}
 
-  DPR=1;
-  recomputeResolution(); ensureLayers(+layersEl.value);
+  DPR=1; recomputeResolution(); ensureLayers(+layersEl.value);
   paintLayerIndex=Math.min(1,layers.length-1); paintSel.value=String(paintLayerIndex); loadLayerUI();
   requestAnimationFrame(tick);
 })();
